fix portal skins name

--- a/src/main/resources/resources/portal-widgets.properties
+++ b/src/main/resources/resources/portal-widgets.properties
@@ -40,6 +40,7 @@
 portalWidget.box.basic.jsp=Basic box
 portalWidget.box.advanced_blue.jsp=Advanced blue box
 portalWidget.box.advanced_green.jsp=Advanced green box
+portalWidget.box.advanced_purple.jsp=Advanced purple box
 
 #Widget
 jnt_googleFeedWidget=RSS feed widget
