refactor portal API to be able to handle non AJAX widgets

--- a/src/main/resources/resources/portal-widgets.properties
+++ b/src/main/resources/resources/portal-widgets.properties
@@ -50,3 +50,4 @@ jnt_helloWorldWidget=Hello world widget
 jnt_googleMapWidget=Map widget
 jnt_twitterPortalWidget=Twitter widget
 jnt_documentBrowserWidget=Document browser widget
+jnt_scriptGadgetWidget=Mario world widget
