fix cache issue with col not created yet when area is displayed also add the script gadget widget

--- a/src/main/resources/resources/portal-widgets.properties
+++ b/src/main/resources/resources/portal-widgets.properties
@@ -50,4 +50,5 @@ jnt_helloWorldWidget=Hello world widget
 jnt_googleMapWidget=Map widget
 jnt_twitterPortalWidget=Twitter widget
 jnt_documentBrowserWidget=Document browser widget
-jnt_scriptGadgetWidget=Mario world widget
+jnt_marioWorldWidget=Mario world widget
+jnt_scriptGadgetWidget=Script gadget widget
