add my bookmarks widget

--- a/src/main/resources/resources/portal-widgets.properties
+++ b/src/main/resources/resources/portal-widgets.properties
@@ -52,3 +52,4 @@ jnt_twitterPortalWidget=Twitter widget
 jnt_documentBrowserWidget=Document browser widget
 jnt_marioWorldWidget=Mario world widget
 jnt_scriptGadgetWidget=Script gadget widget
+jnt_bookmarksWidget=My bookmarks widget
