--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>portal-factory_widgets</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>Portal Factory - widgets</name>
+  <name>Portal factory - widgets</name>
   <description>This is the custom module (portal factory - widgets) for running on a Jahia xCM server.</description>
   <scm>
     <connection>scm:dummy:uri</connection>
