--- a/pom.xml
+++ b/pom.xml
@@ -84,10 +84,11 @@
   <packaging>bundle</packaging>
   <name>Portal factory - widgets</name>
   <description>This is the custom module (portal factory - widgets) for running on a Jahia xCM server.</description>
-  <scm>
-    <connection>scm:dummy:uri</connection>
-    <developerConnection>scm:dummy:uri</developerConnection>
-  </scm>
+    <scm>
+        <connection>scm:git:git@github.com:Jahia/portal-factory_widgets.git</connection>
+        <developerConnection>scm:git:git@github.com:Jahia/portal-factory_widgets.git</developerConnection>
+        <url>scm:git:git@github.com:Jahia/portal-factory_widgets.git</url>
+    </scm>
   <distributionManagement>
     <repository>
       <id>jahia-enterprise-releases</id>
