add copy behavior for portal widgets

--- a/src/main/resources/resources/portal-factory_widgets.properties
+++ b/src/main/resources/resources/portal-factory_widgets.properties
@@ -37,10 +37,10 @@
 #   please contact the sales department at sales@jahia.com.
 
 #Skin
-portalWidget.box.basic.jsp=Basic box
 portalWidget.box.advanced_blue.jsp=Advanced blue box
 portalWidget.box.advanced_green.jsp=Advanced green box
 portalWidget.box.advanced_purple.jsp=Advanced purple box
+portalWidget.box.advanced.deleteConfirmMessage=This widget is a reference to an external one. If you delete it you won't be able to get it back in your portal. Are you sure to want to delete it ?
 
 #Widget
 jnt_googleFeedWidget=RSS feed widget
@@ -53,3 +53,8 @@ jnt_documentBrowserWidget=Document browser widget
 jnt_marioWorldWidget=Mario world widget
 jnt_scriptGadgetWidget=Script gadget widget
 jnt_bookmarksWidget=My bookmarks widget
+
+portalWidgetModel.behavior.copy=Copy
+portalWidgetModel.behavior.ref=Reference
+portalWidgetModel.behavior=Copy behavior
+portalWidgetModel.saved.success=Widget model properties successfully updated
