QA-6092 : portlet widget

--- a/src/main/resources/resources/portal-factory_widgets.properties
+++ b/src/main/resources/resources/portal-factory_widgets.properties
@@ -53,6 +53,7 @@ jnt_documentBrowserWidget=Document browser widget
 jnt_marioWorldWidget=Mario world widget
 jnt_scriptGadgetWidget=Script gadget widget
 jnt_bookmarksWidget=My bookmarks widget
+jnt_portletWidget=Portlet widget
 
 portalWidgetModel.behavior.copy=Copy
 portalWidgetModel.behavior.ref=Reference
