--- a/src/main/resources/resources/portal-factory_widgets.properties
+++ b/src/main/resources/resources/portal-factory_widgets.properties
@@ -37,9 +37,9 @@
 #   please contact the sales department at sales@jahia.com.
 
 #Skin
-portalWidget.box.advanced_blue.jsp=Advanced blue box
-portalWidget.box.advanced_green.jsp=Advanced green box
-portalWidget.box.advanced_purple.jsp=Advanced purple box
+box.advanced_blue=Advanced blue box
+box.advanced_green=Advanced green box
+box.advanced_purple=Advanced purple box
 portalWidget.box.advanced.deleteConfirmMessage=This widget is a reference to an external one. If you delete it you won't be able to get it back in your portal. Are you sure to want to delete it ?
 
 #Widget
