change skins and add white skin

--- a/src/main/resources/resources/portal-factory_widgets.properties
+++ b/src/main/resources/resources/portal-factory_widgets.properties
@@ -40,6 +40,7 @@
 box.advanced_blue=Advanced blue box
 box.advanced_green=Advanced green box
 box.advanced_purple=Advanced purple box
+box.advanced_white=Advanced white box
 portalWidget.box.advanced.deleteConfirmMessage=This widget is a reference to an external one. If you delete it you won't be able to get it back in your portal. Are you sure to want to delete it ?
 
 #Widget
