--- a/src/main/resources/resources/portal-factory_widgets.properties
+++ b/src/main/resources/resources/portal-factory_widgets.properties
@@ -41,7 +41,8 @@ box.advanced_blue=Advanced blue box
 box.advanced_green=Advanced green box
 box.advanced_purple=Advanced purple box
 box.advanced_white=Advanced white box
-portalWidget.box.advanced.deleteConfirmMessage=This widget is a reference to an external one. If you delete it you won't be able to get it back in your portal. Are you sure to want to delete it ?
+portalWidget.box.advanced.deleteConfirmMessage=Are you sure you want to delete this widget: {0} ?
+portalWidget.box.advanced.ref.deleteConfirmMessage=This widget is a reference to an external one. If you delete it you won't be able to get it back in your portal. Are you sure to want to delete it ?
 
 #Widget
 jnt_googleFeedWidget=RSS feed widget
