--- a/src/main/resources/resources/portal-factory_widgets.properties
+++ b/src/main/resources/resources/portal-factory_widgets.properties
@@ -50,6 +50,8 @@ jnt_googleFeedWidget.url=RSS feed URL
 jnt_googleFeedWidget.nbEntries=Number of entries
 jnt_helloWorldWidget=Hello world widget
 jnt_googleMapWidget=Map widget
+jnt_googleMapWidget.lat=Latitude
+jnt_googleMapWidget.lng=Longitude
 jnt_twitterPortalWidget=Twitter widget
 jnt_documentBrowserWidget=Document browser widget
 jnt_marioWorldWidget=Mario world widget
