--- a/pom.xml
+++ b/pom.xml
@@ -81,21 +81,21 @@
     <version>7.0.0.0</version>
   </parent>
   <groupId>org.jahia.modules</groupId>
-  <artifactId>portal-factory_widgets</artifactId>
+  <artifactId>portal-widgets</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Portal factory - widgets</name>
   <description>This is the custom module (portal factory - widgets) for running on a Jahia xCM server.</description>
   <scm>
-    <connection>scm:git:git@github.com:Jahia/portal-factory_widgets.git</connection>
-    <developerConnection>scm:git:git@github.com:Jahia/portal-factory_widgets.git</developerConnection>
-    <url>scm:git:git@github.com:Jahia/portal-factory_widgets.git</url>
+    <connection>scm:git:git@github.com:Jahia/portal-widgets.git</connection>
+    <developerConnection>scm:git:git@github.com:Jahia/portal-widgets.git</developerConnection>
+    <url>scm:git:git@github.com:Jahia/portal-widgets.git</url>
   </scm>
   <dependencies>
     <dependency>
       <groupId>org.jahia.modules</groupId>
-      <artifactId>portal-factory_core</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <artifactId>portal-core</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -134,7 +134,7 @@
         <configuration>
           <instructions>
               <Export-Package>org.jahia.modules.portal.widgets</Export-Package>
-            <Jahia-Depends>default,bookmarks,twitter,portal-factory_core</Jahia-Depends>
+            <Jahia-Depends>default,bookmarks,twitter,portal-core</Jahia-Depends>
           </instructions>
         </configuration>
       </plugin>
