--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
     <dependency>
       <groupId>org.jahia.modules</groupId>
       <artifactId>portal-core</artifactId>
-      <version>2.0.0</version>
+      <version>2.0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
