--- a/src/main/resources/resources/portal-widgets.properties
+++ b/src/main/resources/resources/portal-widgets.properties
@@ -63,3 +63,7 @@ portalWidgetModel.behavior.copy=Copy
 portalWidgetModel.behavior.ref=Reference
 portalWidgetModel.behavior=Copy behavior
 portalWidgetModel.saved.success=Widget model properties successfully updated
+
+jnt_documentBrowserWidget.portal.edit.title=Document browser
+
+jnt.label.warning=Warning
