--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
   </parent>
   <groupId>org.jahia.modules</groupId>
   <artifactId>portal-widgets</artifactId>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Portal factory - widgets</name>
   <description>This is the custom module (portal factory - widgets) for running on a Jahia xCM server.</description>
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>org.jahia.modules</groupId>
       <artifactId>portal-core</artifactId>
-      <version>2.0.2-SNAPSHOT</version>
+      <version>2.0.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
